[tool.poetry]
name = "helaocore"
version = "0.2.0"
description = ""
authors = ["Dan Guevarra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.5.2"
pydantic-core = "2.14.5"
pydantic-settings = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
